--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "type": "git",
     "url": "https://github.com/jmcmichael/insite2020.git"
   },
-  "keywords": ["insite2020", "ellie balk", "whats your number"],
+  "keywords": [
+    "insite2020",
+    "ellie balk",
+    "whats your number"
+  ],
   "author": "Joshua McMichael, Ellie Balk",
   "license": "SEE LICENSE IN LICENSE.txt",
   "bugs": {
@@ -23,8 +27,14 @@
   "homepage": "",
   "dependencies": {
     "bootstrap": "4",
+    "d3": "^5.15.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-bs4": "^1.10.20",
+    "expose-loader": "^0.7.5",
     "jquery": "^3.4.1",
+    "node-fetch": "^2.6.0",
     "normalize.css": "^8.0.0",
+    "papaparse": "^5.1.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
