--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "datatables.net-bs4": "^1.10.20",
     "expose-loader": "^0.7.5",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "normalize.css": "^8.0.0",
     "papaparse": "^5.1.1",
